# local-rag

./: .gitignore  docker-compose.yml  migrate_project.py
.claude/: CLAUDE.md
.claude/skills/: nextjs-agent.md  python-agent.md
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/api/: models.py
backend/api/routes/: documents.py  generated_documents.py  projects.py  query.py  sessions.py  settings.py
backend/cache/: query_cache.py
backend/core/: config.py  database.py  embedding_consistency.py  ingest_queue.py  logger.py  qdrant_sidecar.py
backend/documents/: __init__.py  editor.py  generator.py  templates.py
backend/grader/: crag.py
backend/ingestion/: chunker.py  parsers.py  pipeline.py
backend/memory/: decomposer.py  embeddings.py  hybrid.py  hyde.py  manager.py  mmr.py  query_expansion.py  reranker.py  schema.py  vector_store.py
backend/projects/: manager.py
backend/providers/embedding/: base.py  bge_m3.py  factory.py  gemini.py  ollama.py  openai.py  pool.py  sentence_transformers.py
backend/providers/llm/: anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py
backend/sessions/: compaction.py  context_guard.py  manager.py
backend/tests/: conftest.py  test_cache.py  test_entity_boost.py  test_ingestion.py  test_routes.py  test_search.py  test_sessions.py  test_watcher_checkpoint.py
backend/watcher/: clustering.py  diagnoser.py  engine.py  entity_extractor.py  metrics.py  synthesizer.py  updater.py
frontend/: package-lock.json  package.json
notes/: architecture_analysis.md  nextjs.md  python.md
(+78 files in other folders)
